force-app/main/default/objects/Lead_Scoring_Config__mdt/Lead_Scoring_Config__mdt.object-meta.xml
<CustomObject>
    <description>Configuracoes de pontuacao de Lead - permite ajustar pesos sem alterar codigo</description>
    <label>Lead Scoring Config</label>
    <pluralLabel>Lead Scoring Configs</pluralLabel>
</CustomObject>