force-app/main/default/objects/Lead_Scoring_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indica se esta configuracao de scoring esta ativa</description>
    <label>Ativo</label>
    <type>Checkbox</type>
</CustomField>