force-app/main/default/objects/Lead_Scoring_Config__mdt/fields/Company_Size_Weight__c.field-meta.xml
<CustomField>
    <fullName>Company_Size_Weight__c</fullName>
    <description>Peso do tamanho da empresa no calculo de score (0-100)</description>
    <label>Peso - Tamanho Empresa</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>