force-app/main/default/objects/Lead_Scoring_Config__mdt/fields/Max_Score__c.field-meta.xml
<CustomField>
    <fullName>Max_Score__c</fullName>
    <description>Pontuacao maxima possivel para normalizacao do score final</description>
    <label>Score Maximo</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>