force-app/main/default/objects/Lead_Scoring_Config__mdt/fields/Revenue_Weight__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Weight__c</fullName>
    <description>Peso da receita anual estimada no calculo de score (0-100)</description>
    <label>Peso - Receita Anual</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>