force-app/main/default/objects/Lead_Scoring_Config__mdt/fields/Source_Weight__c.field-meta.xml
<CustomField>
    <fullName>Source_Weight__c</fullName>
    <description>Peso do campo Origem do Lead no calculo de score (0-100)</description>
    <label>Peso - Origem</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>